--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack serve  --config webpack.dev.js --open"
+    "build-dev": "webpack serve  --config webpack.dev.js --open",
+    "test": "jest"
+  
   },
   "keywords": [],
   "author": "",
